// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple 1`] = `
<div>
  <h1>
    Viewing 
    5
     
    expenses
     totaling 
    $232.35
  </h1>
</div>
`;
